--- a/credentials.css
+++ b/credentials.css
@@ -44,14 +44,15 @@ input{
     font-family: 'Times New Roman', Times, serif;
     background-color: white;
     border: 2px solid white;
-    color: white;
+    color: #757575;
 }
 #level{
-    background-color: greenyellow; 
+    background-color: rgb(255, 0, 140); 
     color: white; 
-    border: 2px solid greenyellow; 
+    border: 2px solid rgb(255, 0, 140); 
     cursor: pointer;
 }
+
 
 #start {
     background-color: greenyellow;
@@ -61,4 +62,33 @@ input{
     align-items: center;
     justify-content: center;
 
+}
+/* making the page responsive */
+@media screen and (max-width: 900px)  {
+    img{
+        transform: scale(1.1);
+        margin-top: 10%;
+    }
+    .flex {
+        width: 100%;
+        height: 80%;
+        flex-direction: column; 
+        padding: 10px; 
+        justify-content: space-between;
+    }
+    select{
+        font-size: 40px;
+        overflow-y: scroll;
+        box-sizing: border-box;
+    }
+    #box {
+        padding: 20px;
+
+    }
+
+    .samebox {
+        width: 60%;
+        margin-bottom: 10px;
+        font-size: 35px;
+    }
 }
