--- a/game.css
+++ b/game.css
@@ -23,7 +23,7 @@ body{
     flex-direction: column;
     gap: 10px;
 }
-#info-screen p{
+#info-screen p, #target p{
     border-radius: 25px;
     width: 250px;
     height: 50px;
@@ -52,4 +52,18 @@ body{
 #game-screen img{
     width: 50px;
     height: 50px;
+}
+
+/* making the page responsive */
+@media screen and (max-width: 900px) {
+    img{
+        height: 300px;
+    }
+    body{
+        flex-direction: column;
+    }
+    #game-screen{
+        width: 500px;
+        height: 500px;
+    }
 }
