--- a/credentials.css
+++ b/credentials.css
@@ -41,7 +41,6 @@ body{
     font-size: 25px;
 }
 input{
-    font-family: 'Times New Roman', Times, serif;
     background-color: white;
     border: 2px solid white;
     color: #757575;
@@ -56,39 +55,39 @@ input{
 
 #start {
     background-color: greenyellow;
+    border: 2px solid greenyellow;
     cursor: pointer;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
 
 }
 /* making the page responsive */
 @media screen and (max-width: 900px)  {
     img{
-        transform: scale(1.1);
         margin-top: 10%;
+        height: 500px;
+        width: 300px;
+
     }
     .flex {
         width: 100%;
         height: 80%;
         flex-direction: column; 
+        align-items: center;
         padding: 10px; 
         justify-content: space-between;
     }
-    select{
-        font-size: 40px;
-        overflow-y: scroll;
-        box-sizing: border-box;
-    }
-    #box {
-        padding: 20px;
+   
 
-    }
 
     .samebox {
-        width: 60%;
-        margin-bottom: 10px;
-        font-size: 35px;
+        width: 150px;
+        margin-bottom: 20px;
+        font-size: 15px;
+        height: 60px;
+        /* padding: 20px; */
     }
 }
