--- a/style.css
+++ b/style.css
@@ -31,15 +31,17 @@ p{
 
 /* making the page responsive */
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 500px) {
 
     img{
-        margin-top: 30%;
+        margin-top: 40%;
+        height: 300px;
+        width: 300px;
     }
     p{
-        width: 250px;
-        height: 70px;
-        font-size: 50px;
-        margin-top: 70px;
+        width: 120px;
+        height: 40px;
+        font-size: 25px;
+        /* margin-top: 70px; */
     }
 }
