--- a/credentials.css
+++ b/credentials.css
@@ -23,6 +23,7 @@ body{
 .flex{
     display: flex;
     justify-content: space-evenly;
+
     padding: 100px;
 
 }
@@ -30,7 +31,7 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-evenly;
+    margin-top: 30%;
 }
 
 .samebox{
@@ -50,6 +51,7 @@ input{
     color: white; 
     border: 2px solid rgb(255, 0, 140); 
     cursor: pointer;
+    margin-bottom: 10%;
 }
 
 
@@ -67,27 +69,36 @@ input{
 /* making the page responsive */
 @media screen and (max-width: 900px)  {
     img{
-        margin-top: 10%;
-        height: 500px;
+        margin-top: 0%;
+        height: 300px;
         width: 300px;
 
     }
     .flex {
         width: 100%;
-        height: 80%;
+        height: 90%;
         flex-direction: column; 
         align-items: center;
         padding: 10px; 
-        justify-content: space-between;
     }
-   
-
+    #level{
+        margin-bottom: 12px;
+    }
+    
+    #box{
+        margin-top: 0;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    
+    }
 
     .samebox {
         width: 150px;
-        margin-bottom: 20px;
+        margin-bottom: 0px;
         font-size: 15px;
-        height: 60px;
+        height: 30px;
         /* padding: 20px; */
+        
     }
 }
