--- a/result.css
+++ b/result.css
@@ -25,8 +25,8 @@ img{
 #message{
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 25px;
-    height: 120px;
-    width: 650px;
+    height: fit-content;
+    width: fit-content;
     font-size: 20px;
     padding: 20px;
     /* margin-top: 40px; */
@@ -50,8 +50,8 @@ img{
 
     #message{
     border-radius: 25px;
-    height: 30%;
-    width: 95%;
+    height: fit-content;
+    width: fit-content;
     margin-top: -30%;
 }
 img{
