--- a/credentials.css
+++ b/credentials.css
@@ -56,8 +56,8 @@ input{
 
 
 #start {
-    background-color: greenyellow;
-    border: 2px solid greenyellow;
+    background-color: #4E008A;
+    border: 2px solid #4E008A;
     cursor: pointer;
     text-align: center;
     display: flex;
