--- a/instruction.css
+++ b/instruction.css
@@ -36,8 +36,8 @@ body{
 
 /* making let's crush button */
 button{
-    background-color: greenyellow;
-    border: 2px solid greenyellow;
+    background-color: #4E008A;
+    border: 2px solid #4E008A;
     border-radius: 25px;
     width: 200px;
     height: 50px;
