--- a/result.css
+++ b/result.css
@@ -27,14 +27,14 @@ img{
     border-radius: 25px;
     height: fit-content;
     width: fit-content;
-    font-size: 30px;
+    font-size: 20px;
     padding: 20px;
     /* margin-top: 40px; */
 }
 /* making the restart button */
 #restart{
-    background-color: greenyellow;
-    border: 2px solid greenyellow;
+    background-color: #4E008A;
+    border: 2px solid #4E008A;
     border-radius: 25px;
     width: 200px;
     height: 50px;
@@ -53,7 +53,7 @@ img{
     height: fit-content;
     width: fit-content;
     margin-top: -50%;
-    font-size: 20px;
+    font-size: 15px;
     margin-left: 5%;
     margin-right: 5%;
 }
@@ -64,11 +64,12 @@ img{
 }
 #restart{
     
-    width: 250px;
-    height: 50px;
+    width: fit-content;
+    height: fit-content;
     text-align: center;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 15px;
     margin-top: -50%;
+    padding: 15px;
 }
 }
