--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body{
 }
 /* making start button */
 p{
-    background-color: greenyellow;
-    border: 2px solid greenyellow;
+    background-color: #4E008A;
+    border: 2px solid #4E008A;
     border-radius: 25px;
     width: 150px;
     height: 50px;
