--- a/result.css
+++ b/result.css
@@ -32,7 +32,7 @@ img{
     /* margin-top: 40px; */
 }
 /* making the restart button */
-#restart{
+button{
     background-color: #4E008A;
     border: 2px solid #4E008A;
     border-radius: 25px;
@@ -52,7 +52,7 @@ img{
     border-radius: 25px;
     height: fit-content;
     width: fit-content;
-    margin-top: -50%;
+    margin-top: 0px;
     font-size: 15px;
     margin-left: 5%;
     margin-right: 5%;
@@ -62,14 +62,15 @@ img{
     width: 300px;
     margin-top: 0px;
 }
-#restart{
+button{
     
-    width: fit-content;
+    width: 100px;
     height: fit-content;
     text-align: center;
     cursor: pointer;
     font-size: 15px;
-    margin-top: -50%;
+    margin-top: 0px;
     padding: 15px;
 }
+
 }
